--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.11",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
-    "swiper": "^11.2.1",
-    "react-router-dom": "^6.29.0"
+    "swiper": "^11.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
