--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "cra-template": "1.2.0",
+    "install": "^0.13.0",
     "lineicons": "^1.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
